package at.fhj.swd;

@FunctionalInterface
public interface XmlElement {
    public String toXml();
}
