@startuml
left to right direction

title __ShoppingCart-Exercise Class Diagram__\n

  namespace at.fhj.swd {
    class at.fhj.swd.Category {
        - children : List<Category>
        - id : int
        - name : String
        - products : List<Product>
        + <<constructor>>Category(String)
        + getId():int
        + setId(int):void
        + getName():String
        + setName(String):void
        + addProduct(Product):void
        + getProducts():List<Product>
        + addChild(Category):void
        + getChildren():List<Category>
        + getParent():Category
        + setParent(Category):void
        + toXml():String
    }
  }
  

  namespace at.fhj.swd {
    abstract class at.fhj.swd.Entity {
        {static} - nextId : int
        + <<constructor>>Entity()
        # getNextId():int
        {static} # setNextId(int):void
    }
  }
  

  namespace at.fhj.swd {
    class at.fhj.swd.Product {
        - id : int
        - price : long
        - title : String
        + <<constructor>>Product(int,String,long)
        + <<constructor>>Product(String,long)
        + <<constructor>>Product(Product)
        + getId():int
        + setId(int):Product
        + getTitle():String
        + setTitle(String):Product
        + getPrice():long
        + setPrice(long):Product
        + getCategory():Category
        + setCategory(Category):void
        + toXml():String
        + toString():String
        # <<constructor>>Product()
    }
  }
  

  namespace at.fhj.swd {
    class at.fhj.swd.ShoppingCart {
        - products : List<Product>
        - taxrate : int
        + <<constructor>>ShoppingCart()
        + getTaxrate():int
        + setTaxrate(int):void
        + addProduct(Product):void
        + getProducts():List<Product>
        + calculateTotalSum():long
        + calculateTax():long
    }
  }
  

  namespace at.fhj.swd {
    interface at.fhj.swd.XmlElement {
        {abstract} + toXml():String
    }
  }
  

  at.fhj.swd.Category -up-|> at.fhj.swd.Entity
  at.fhj.swd.Category o-- at.fhj.swd.Category : parent
  at.fhj.swd.Entity .up.|> at.fhj.swd.XmlElement
  at.fhj.swd.Product -up-|> at.fhj.swd.Entity
  at.fhj.swd.Product o-- at.fhj.swd.Category : category


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
